# totrilib

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  LICENSE  README.md  docker-compose.yml  setup.py
cmake/: configure_optix.cmake
data/: .gitignore
src/: totri.cpp
src/common/: buffer.h  const.h  context_manager.h  math.h  optix.cu  optix.h  triangle.h
src/reconstruct/: backprojection.cpp  backprojection.h  backprojection_cuda.cu  backprojection_cuda.h
src/render/: mesh.cpp  mesh.h  mesh_cuda.cu  mesh_cuda.h  volume.cpp  volume.h  volume_cuda.cu  volume_cuda.h
src/render/program/: mesh_common.h  mesh_confocal_forward.cu  mesh_confocal_forward.h  mesh_confocal_forward_optix.cu  mesh_confocal_grad_verts.cu  mesh_confocal_grad_verts.h  mesh_confocal_grad_verts_optix.cu  mesh_exhaustive_forward.cu  mesh_exhaustive_forward.h  mesh_exhaustive_forward_optix.cu  mesh_exhaustive_grad_verts.cu  mesh_exhaustive_grad_verts.h  mesh_exhaustive_grad_verts_optix.cu  mesh_program.cu  mesh_program.h
src/util/: rbf2volume.cpp  rbf2volume.h  rbf2volume_cuda.cu  rbf2volume_cuda.h
totri/: types.py
totri/data/: __init__.py  lindellfk2019.py  mesh.py  otooleconfocal2018.py  pfm.py  util.py  veltennc2012.py  zaragoza.py
totri/fitting/: background.py  depth_map.py  pose.py  rbf.py  rbf_backup.py
totri/reconstruct/: __init__.py  backprojection.py  fk_migration.py
totri/render/: __init__.py  mesh.py  volume.py
totri/util/: __init__.py  depthmap.py  format.py  log.py  optim.py  rbf2volume.py  render.py  video.py
